--- a/home.html
+++ b/home.html
@@ -35,11 +35,14 @@
     </header>
 
     <div class="card">
-        <!-- TODO: LINK PROFILE PHOTO AND NAME FROM DATABASE -->
+        <!-- TODO: 1. LINK PROFILE PHOTO AND NAME FROM DATABASE 2. MAKE STUFF CLICKABLE-->
         <div class="nameAndProfile"><img src="/assets/user.png" alt="user.png" width="30px"><span>Name</span></div>
         <div class="card-content"></div>
         <div class="card-body">
-            
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="votesAndComments">
+            <a><img src="/assets/upvote.png" alt="" width="14px"></a><span>0</span>
         </div>
     </div>
 </body>
