--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="votesAndComments">
-            <a><img src="/assets/upvote.png" alt="" width="14px"></a><span>0</span>
+            <a><img src="/assets/upvote.png" alt="" width="14px" class="upvoteImage"></a><span class="upvoteCount">0</span>
         </div>
     </div>
 </body>
